# sfs3-api-haxe

./: .gitignore  README.md  build.hxml  docs.hxml  extraParams.hxml  haxelib.json
.github/workflows/: build-openfl-samples.yml  build.yml  doc.yml  openfl-build.yml
cpp/: README.md  build_lib.bat
cpp/include/: SFS3.hpp  SFS3_API.h
cpp/include/sfs3/: ConfigData.hpp  Detail.hpp  Event.hpp  Room.hpp  SFSArray.hpp  SFSObject.hpp  SmartFox.hpp  User.hpp
cpp/src/: SFS3_API.cpp
sample/as3/SimpleChat/: SimpleChat-app.xml  SimpleChat.as  build.bat
sample/as3/TransportValidator/: TransportValidator-app.xml  TransportValidator.as  build.bat
sample/cpp/SimpleChat/: CMakeLists.txt  README.md  SimpleChatGUI.cpp  imgui.ini
sample/js/SimpleChat/: index.html
sample/nodejs/SimpleChat/: index.html  main.js  package-lock.json  package.json
sample/openfl/SimpleChat/: project.xml
sample/openfl/SimpleChat/src/: SimpleChat.hx
sample/openfl/TransportValidator/: project.xml
sample/openfl/TransportValidator/src/: TransportValidator.hx
sample/python/: ApiTester.py  SimpleChat.py
sample/python/SimpleChat/: SimpleChat.py
src/: import.hx
src/com/smartfoxserver/v3/: ConfigData.hx  ISmartFox.hx  SmartFox.hx
src/java/security/: Key.hx
src/java/security/spec/: AlgorithmParameterSpec.hx
src/javax/crypto/: Cipher.hx
src/javax/crypto/spec/: IvParameterSpec.hx  SecretKeySpec.hx
src/js/lib/: BigInt.hx
src/macro/: PythonMinifyMacro.hx
src/macro/hashlink/: PatchFuture.hx
src/macro/python/: MinifyMacro.hx
src/sfs3/client/: ConfigData.hx  ISmartFox.hx  SmartFox.hx
src/sfs3/client/bitswarm/: BitSwarmClient.hx  BitSwarmEvent.hx  ConnSettings.hx  ConnectionMode.hx  CryptoEvent.hx  CryptoInitializer.hx  CryptoKey.hx  IBitSwarmClient.hx  IController.hx  ICryptoStorage.hx  IMessage.hx  IOHandler.hx  IProtocolCodec.hx  ReconnectionState.hx  SocketState.hx  TransportType.hx
src/sfs3/client/controllers/: BaseController.hx  ExtensionController.hx  IResponseHandler.hx  SystemController.hx
src/sfs3/client/core/: ApiEvent.hx  ClusterEvent.hx  EventDispatcher.hx  EventParam.hx  IDispatchable.hx  IEventListener.hx  Logger.hx  LoggerFactory.hx  SFSBuddyEvent.hx  SFSEvent.hx
src/sfs3/client/entities/: Buddy.hx  BuddyOnlineState.hx  IMMOItem.hx  MMOItem.hx  MMORoom.hx  Room.hx  SFSBuddy.hx  SFSRoom.hx  SFSUser.hx  User.hx  UserPrivileges.hx
src/sfs3/client/exceptions/: ClassNotFoundException.hx  IllegalArgumentException.hx  IllegalStateException.hx  SFSCodecException.hx  SFSException.hx  SFSValidationException.hx  UnsupportedOperationException.hx
src/sfs3/client/requests/: AdminMessageRequest.hx  BanMode.hx  BanUserRequest.hx  BaseRequest.hx  ChangeRoomCapacityRequest.hx  ChangeRoomNameRequest.hx  ChangeRoomPasswordStateRequest.hx  CreateRoomRequest.hx  ExtensionAsyncRequest.hx  ExtensionRequest.hx  FindRoomsRequest.hx  FindUsersRequest.hx  GenericMessageRequest.hx  GenericMessageType.hx  HandshakeRequest.hx  IClientRequest.hx  JoinRoomRequest.hx  KickUserRequest.hx  LeaveRoomRequest.hx  LoginRequest.hx  LogoutRequest.hx  ManualDisconnectionRequest.hx  MessageRecipientMode.hx  ModeratorMessageRequest.hx  ObjectMessageRequest.hx  PingPongRequest.hx  PlayerToSpectatorRequest.hx  RoomEvents.hx  (+12 more)
(+518 files in other folders)
